unpackaged/main/default/objects/Account/fields/Account_Owner_Dupe__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Dupe__c</fullName>
    <description>Don't delete - for reporting purposes</description>
    <formula>IF(OwnerId="00550000000rXA5","Lori McMahon",IF(OwnerId="00550000000rf0I","Kara Doherty","0"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Dupe</label>
    <type>Text</type>
</CustomField>