unpackaged/main/default/objects/Account/fields/Advertising_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Revenue__c</fullName>
    <description>Shows the total advertising revenue of the Account.</description>
    <inlineHelpText>Shows the total advertising revenue of the Account.</inlineHelpText>
    <label>Advertising Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Advertising Opportunity</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>