unpackaged/main/default/objects/Account/fields/Advertising_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advertising Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>