unpackaged/main/default/objects/Account/fields/Advertising_Status__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Status__c</fullName>
    <label>Advertising Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Customer</fullName>
                <color>#0B6FCE</color>
                <label>Current Customer</label>
            </value>
            <value>
                <fullName>Former Customer</fullName>
                <color>#E27001</color>
                <label>Former Customer</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <color>#993399</color>
                <default>true</default>
                <label>Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>