unpackaged/main/default/objects/Account/fields/Annual_Profit__c.field-meta.xml
<CustomField>
    <fullName>Annual_Profit__c</fullName>
    <label>Annual Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>