unpackaged/main/default/objects/Account/fields/Assignment_number__c.field-meta.xml
<CustomField>
    <fullName>Assignment_number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Assignment number</label>
    <type>AutoNumber</type>
</CustomField>