unpackaged/main/default/objects/Account/fields/Can_t_Match__c.field-meta.xml
<CustomField>
    <fullName>Can_t_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can't Match</label>
    <type>Checkbox</type>
</CustomField>