unpackaged/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Shows what products the customer has purchased.</description>
    <inlineHelpText>Shows what products the customer has purchased.</inlineHelpText>
    <label>Customer Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Subscription - Single</fullName>
            </value>
            <value>
                <fullName>Subscription - Multi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>