unpackaged/main/default/objects/Account/fields/CW_OrganizationID__c.field-meta.xml
<CustomField>
    <fullName>CW_OrganizationID__c</fullName>
    <label>Company ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>