unpackaged/main/default/objects/Account/fields/CW_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CW_Record_Type__c</fullName>
    <label>CW Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ad Sales</fullName>
            </value>
            <value>
                <fullName>Subscriptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>