unpackaged/main/default/objects/Account/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <formula>IF( ISPICKVAL(Industry,""), 0,20) + IF( ISPICKVAL(Rating,""), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,""), 0,20)</formula>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>