unpackaged/main/default/objects/Account/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <inlineHelpText>Contains email domain of the Contacts associated with this Account.</inlineHelpText>
    <label>Email Domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>