unpackaged/main/default/objects/Account/fields/F1K_Rank__c.field-meta.xml
<CustomField>
    <fullName>F1K_Rank__c</fullName>
    <description>Ranking in 2015 Fortune 1000 list.</description>
    <label>F1K Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>