unpackaged/main/default/objects/Account/fields/F1K_Tier__c.field-meta.xml
<CustomField>
    <fullName>F1K_Tier__c</fullName>
    <label>F1K Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fortune 100</fullName>
            </value>
            <value>
                <fullName>Fortune 500</fullName>
            </value>
            <value>
                <fullName>Fortune 1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>