unpackaged/main/default/objects/Account/fields/Market_del__c.field-meta.xml
<CustomField>
    <fullName>Market_del__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>eLearning</fullName>
            </value>
            <value>
                <fullName>ERM</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Software | Business Process Management</fullName>
            </value>
            <value>
                <fullName>Software | eDiscovery</fullName>
            </value>
            <value>
                <fullName>Software | Email Controls</fullName>
            </value>
            <value>
                <fullName>Software | Identity Management</fullName>
            </value>
            <value>
                <fullName>Software | Monitoring &amp; Control</fullName>
            </value>
            <value>
                <fullName>Software | Other</fullName>
            </value>
            <value>
                <fullName>Software | PCI Compliance</fullName>
            </value>
            <value>
                <fullName>Software | Proxy Services</fullName>
            </value>
            <value>
                <fullName>Software | Records Management</fullName>
            </value>
            <value>
                <fullName>Software | Security</fullName>
            </value>
            <value>
                <fullName>Software | Whistleblower</fullName>
            </value>
            <value>
                <fullName>Software | XBRL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>