unpackaged/main/default/objects/Account/fields/Mass_field_update__c.field-meta.xml
<CustomField>
    <fullName>Mass_field_update__c</fullName>
    <description>Used to mass update all Account records</description>
    <label>Mass field update</label>
    <length>10</length>
    <type>Text</type>
</CustomField>