unpackaged/main/default/objects/Account/fields/MultiExpires__c.field-meta.xml
<CustomField>
    <fullName>MultiExpires__c</fullName>
    <description>Date when this account's Multi subscriber expires</description>
    <label>MultiExpires</label>
    <type>Date</type>
</CustomField>