unpackaged/main/default/objects/Account/fields/MultiSubscriber__c.field-meta.xml
<CustomField>
    <fullName>MultiSubscriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the account has a contact where user_type__c == 'Multi', this field will link to that contact.
If the field is null, the account has no multi contact.</description>
    <label>MultiSubscriber</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>