unpackaged/main/default/objects/Account/fields/Number_of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contacts__c</fullName>
    <description>Shows the number of Contacts associated with this Account.</description>
    <label>Number of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>