unpackaged/main/default/objects/Account/fields/Number_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Leads__c</fullName>
    <description>Shows the number of Leads associated with this Account.</description>
    <label>Number of Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>