unpackaged/main/default/objects/Account/fields/Number_of_Multi_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Multi_Users__c</fullName>
    <description>Shows the number of Multi Subscription users associated with this Account.</description>
    <label>Number of Multi Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>