unpackaged/main/default/objects/Account/fields/OSKeyID__c.field-meta.xml
<CustomField>
    <fullName>OSKeyID__c</fullName>
    <label>OSKeyID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>