unpackaged/main/default/objects/Account/fields/Previous_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Account_Owner__c</fullName>
    <label>Previous Account Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>