unpackaged/main/default/objects/Account/fields/Rep_name__c.field-meta.xml
<CustomField>
    <fullName>Rep_name__c</fullName>
    <formula>IF(OwnerId="",(IF(( RoundRobin__c =1), "Lori McMahon",IF(( RoundRobin__c =0),"Kara Doherty",""))),OwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Should Be</label>
    <type>Text</type>
</CustomField>