unpackaged/main/default/objects/Account/fields/RoundRobin__c.field-meta.xml
<CustomField>
    <fullName>RoundRobin__c</fullName>
    <formula>MOD(VALUE (Assignment_number__c),3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RoundRobin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>