unpackaged/main/default/objects/Account/fields/SingleExpires__c.field-meta.xml
<CustomField>
    <fullName>SingleExpires__c</fullName>
    <label>SingleExpires</label>
    <type>Date</type>
</CustomField>