unpackaged/main/default/objects/Account/fields/SingleSubscriber__c.field-meta.xml
<CustomField>
    <fullName>SingleSubscriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SingleSubscriber</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (SingleSubscriber)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>