unpackaged/main/default/objects/Account/fields/SP500__c.field-meta.xml
<CustomField>
    <fullName>SP500__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S&amp;P 500</label>
    <type>Checkbox</type>
</CustomField>