unpackaged/main/default/objects/Account/fields/Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Status__c</fullName>
    <label>Subscription Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Customer - Single</fullName>
                <color>#0B6FCE</color>
                <label>Current Customer - Single</label>
            </value>
            <value>
                <fullName>Current Customer - Multi</fullName>
                <color>#78C953</color>
                <label>Current Customer - Multi</label>
            </value>
            <value>
                <fullName>Former Customer</fullName>
                <color>#E27001</color>
                <label>Former Customer</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <color>#A845DC</color>
                <default>true</default>
                <label>Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>