unpackaged/main/default/objects/Account/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <description>Shows the total revenue of the Account for CW.</description>
    <inlineHelpText>Shows the total revenue of the Account for CW.</inlineHelpText>
    <label>Total Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>