unpackaged/main/default/objects/Account/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temp field to show if an account has been updated (i.e. employees, ownership, rev).</description>
    <label>Updated</label>
    <type>Checkbox</type>
</CustomField>