unpackaged/main/default/objects/Account/fields/User_Limit__c.field-meta.xml
<CustomField>
    <fullName>User_Limit__c</fullName>
    <label>User Limit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>