unpackaged/main/default/objects/Account/fields/Vendor_Portal__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Portal__c</fullName>
    <label>Vendor Portal</label>
    <type>Url</type>
</CustomField>