unpackaged/main/default/objects/Account/fields/Year_End__c.field-meta.xml
<CustomField>
    <fullName>Year_End__c</fullName>
    <label>Year End</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
            <value>
                <fullName>Quarterly Budgets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>