unpackaged/main/default/objects/Account/listViews/AccountsNotLinkedtoOS.listView-meta.xml
<ListView>
    <fullName>AccountsNotLinkedtoOS</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.OWNERSHIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OSKeyID__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Can_t_Match__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Accounts Not Linked to OS</label>
</ListView>