unpackaged/main/default/objects/Account/listViews/all_active_multis_with_exp_date.listView-meta.xml
<ListView>
    <fullName>all_active_multis_with_exp_date</fullName>
    <columns>User_Limit__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Customer_Type__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>MultiExpires__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MultiExpires__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>All Active Multis with Exp. Date</label>
</ListView>