unpackaged/main/default/objects/Account/listViews/All_Active_Multis_with_Exp_Date1.listView-meta.xml
<ListView>
    <fullName>All_Active_Multis_with_Exp_Date1</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>User_Limit__c</columns>
    <columns>MultiExpires__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MultiExpires__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>All Active Multis with Exp. Date</label>
</ListView>