unpackaged/main/default/objects/Account/listViews/all_multis_in_texas.listView-meta.xml
<ListView>
    <fullName>all_multis_in_texas</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>User_Limit__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>MultiExpires__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MultiExpires__c</field>
        <operation>greaterOrEqual</operation>
        <value>8/1/2017</value>
    </filters>
    <filters>
        <field>MultiExpires__c</field>
        <operation>lessOrEqual</operation>
        <value>8/31/2019</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE_CODE</field>
        <operation>equals</operation>
        <value>TX</value>
    </filters>
    <label>all multis in texas</label>
</ListView>