unpackaged/main/default/objects/Account/listViews/My_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Accounts</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>User_Limit__c</columns>
    <columns>Number_of_Multi_Users__c</columns>
    <columns>MultiExpires__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>Subscription_Revenue__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MultiExpires__c</field>
        <operation>greaterThan</operation>
        <value>5/31/2017</value>
    </filters>
    <filters>
        <field>MultiExpires__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2017</value>
    </filters>
    <label>Multi's expiring 6/1/17 -12/31/17</label>
    <sharedTo>
        <group>Membership_Sales</group>
        <group>Sales_Marketing</group>
    </sharedTo>
</ListView>