unpackaged/main/default/objects/Account/listViews/My_Accounts2.listView-meta.xml
<ListView>
    <fullName>My_Accounts2</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>F1K_Rank__c</columns>
    <columns>Subscription_Status__c</columns>
    <columns>Registration_Status__c</columns>
    <columns>Advertising_Status__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>